# smartnic-tutorial-sc25

./: .gitignore  README.md
code/: README.md  env.sh  run_service.sh  run_service_mpi.sh  run_service_mpi_1sc.sh  run_task.sh  run_task_1sc.sh  run_task_mpi.sh
code/01-algorithm-restructuring-minimd/: README.md
code/01-algorithm-restructuring-minimd/scripts/: gatech_cluster_set_env.sh  request_bf3_heterogenous_slurm_job.sh
code/03-algorithm-restructuring-minimd/: README.md
code/03-algorithm-restructuring-minimd/mini-md-force-on-bf/: Cu_u6.eam  LICENSE  Makefile  Makefile.cray  Makefile.cray_intel  Makefile.default  Makefile.intel  Makefile.openmpi  README  appfile  atom.cpp  atom.h  bf_comm.cpp  bf_comm.h  comm.cpp  comm.h  force.h  force_eam.cpp  force_eam.h  force_lj.cpp  force_lj.h  input.cpp  integrate.cpp  integrate.h  ljs.cpp  neighbor.cpp  neighbor.h  output.cpp  setup.cpp  thermo.cpp  threadData.h  timer.cpp  timer.h  types.h  variant.h
code/03-algorithm-restructuring-minimd/mini-md-force-on-bf/inputs/: in.eam-data.lammps  in.eam-data.miniMD  in.eam.lammps  in.eam.miniMD  in.eam.miniMD_comd  in.lj-data.lammps  in.lj-data.miniMD  in.lj.lammps  in.lj.miniMD  in.lj.miniMD_comd
code/04-openmp-offload-dpu/: README.md  clean.sh  compile.sh  run_service.sh  run_task.sh
code/04-openmp-offload-dpu/task_a/: CMakeLists.txt  README.md  hello.c
code/04-openmp-offload-dpu/task_b/: CMakeLists.txt  README.md
code/04-openmp-offload-dpu/task_c/: README.md  compile.sh
code/odos-mpi/: README.md  clean.sh  compile.sh  run_service_mpi_pt2pt.sh  run_task_pt2pt.sh
code/odos-mpi/task_a/: CMakeLists.txt
code/task_b/: CMakeLists.txt
code/task_c/: compile.sh
code/task_d/: CMakeLists.txt
